WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49196
Plug-in views should not assume that plugins are RenderEmbeddedObjects
https://bugs.webkit.org/show_bug.cgi?id=49196
Summary
Plug-in views should not assume that plugins are RenderEmbeddedObjects
Anders Carlsson
Reported
2010-11-08 11:52:16 PST
Plug-in views should not assume that plugins are RenderEmbeddedObjects
Attachments
Patch
(3.18 KB, patch)
2010-11-08 11:53 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-11-08 11:52:35 PST
<
rdar://problem/8638467
>
Anders Carlsson
Comment 2
2010-11-08 11:53:37 PST
Created
attachment 73260
[details]
Patch
Anders Carlsson
Comment 3
2010-11-08 11:58:51 PST
Committed
r71554
: <
http://trac.webkit.org/changeset/71554
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug