Plug-in views should not assume that plugins are RenderEmbeddedObjects https://bugs.webkit.org/show_bug.cgi?id=49196 <rdar://problem/8638467>

Reviewed by Dan Bernstein.

WebKit/mac:

* Plugins/Hosted/WebHostedNetscapePluginView.mm:
(-[WebHostedNetscapePluginView pluginHostDied]):

WebKit2:

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::pluginProcessCrashed):

Canonical link: https://commits.webkit.org/62041@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71554 268f45cc-cd09-0410-ab3c-d52691b4dbfc